# BuildingMOTIF

./: .buildinfo  .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AFXMLEXPORT.md  API.md  Dockerfile  LICENSE  Makefile  README.html  README.md  TEMPLATE_ISOMORPHISM.md  alembic.ini  bibliography.html  configs.py.dist  docker-compose.yml  genindex.html  intro.html  mypy.ini  objects.inv  py-modindex.html  pylama.ini  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/certs/: nrel_root_ca.crt
.doctrees/: README.doctree  bibliography.doctree  environment.pickle
.doctrees/explanations/: ingresses.doctree  point-label-parsing.doctree  shacl_to_sparql.doctree  shapes-and-templates.doctree  templates.doctree
.doctrees/guides/: bacnet-to-brick.doctree  csv-import.doctree  generating-queries.doctree  ingress-bacnet-to-brick.doctree  ingress.doctree
.doctrees/reference/: cli_tool.doctree  developer_documentation.doctree
.doctrees/tutorials/: model_correction.doctree  model_creation.doctree  model_validation.doctree  template_writing.doctree
.github/workflows/: .python-version  cd.yml  ci.yml  devcontainer.yml  docs.yml  project.yml  push.yml  repo-vis.yml  setup.yml
_modules/: index.html
_modules/buildingmotif/: label_parsing.html  model_builder.html  namespaces.html  progressive_creation.html  schemas.html  template_compilation.html  template_matcher.html  template_to_shape.html  utils.html
_sources/: README.md
_sources/explanations/: ingresses.md  point-label-parsing.md  shapes-and-templates.md  templates.md
_sources/guides/: bacnet-to-brick.md  csv-import.md  ingress.md
_sources/reference/: cli_tool.md  developer_documentation.md
_sources/tutorials/: model_correction.ipynb  model_correction.md  model_creation.ipynb  model_creation.md  model_validation.ipynb
afxml/: afxml.py  readme.md  ttl_to_af.py  utils.py  validation.py
afxml/docs/: CONFIGURING-PI-manual.md  CONFIGURING-RULES-manual.md  TTL_TO_AF-manual.md
afxml/examples/: ahu-vav-example.py  g36-combined-ahu-vav.ttl
apidoc/: index.html
apidoc/_autosummary/: buildingmotif.api.app.html  buildingmotif.api.html  buildingmotif.api.views.html  buildingmotif.api.views.library.html  buildingmotif.api.views.model.html  buildingmotif.api.views.template.html  buildingmotif.building_motif.building_motif.html  buildingmotif.building_motif.html  buildingmotif.building_motif.singleton.html  buildingmotif.database.graph_connection.html  buildingmotif.database.html  buildingmotif.database.table_connection.html  buildingmotif.database.tables.html  buildingmotif.database.utils.html  buildingmotif.dataclasses.html  buildingmotif.dataclasses.library.html  buildingmotif.dataclasses.model.html  buildingmotif.dataclasses.shape_collection.html  buildingmotif.dataclasses.template.html  buildingmotif.dataclasses.validation.html  buildingmotif.html  buildingmotif.namespaces.html  buildingmotif.template_compilation.html  buildingmotif.template_matcher.html  buildingmotif.utils.html
book/: _config.yml  _toc.yml  intro.md  references.bib
book/apidoc/: index.rst
book/how_to_guides/: bacnet-to-brick.md
book/tutorials/: model_correction.md  model_creation.md  model_validation.md  simple-create-and-validate.md  template_writing.ipynb  tutorial1_model.ttl  tutorial2_manifest.ttl  use-case-validation.md
building_motif/: __init__.py  template.py  template_matcher.py  utils.py
building_motif/building_motif/: building_motif.py
building_motif/database/: graph_connection.py  table_connection.py
building_motif/dataclasses/: __init__.py  model.py  template.py  (+1 more)
buildingmotif/: GraphHandler.py  __init__.py  building_motif.py  data_classes.py  embeddings.py  ingress.py  isomorphism.py  label_parsing.py  model_builder.py  monomorphism.py  namespaces.py  progressive_creation.py  schemas.py  shape_diff.py  shape_rewrite.py  shape_utils.py  singleton.py  tables.py  template.py  template_compilation.py  template_matcher.py  template_to_shape.py  utils.py  validation.py
buildingmotif-app/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
devdocs/: _toc.yml  intro.md
docs/: README.md  _config.yml  _toc.yml  bibliography.md  conf.py  intro.md
explanations/: ingresses.html  point-label-parsing.html  shacl_to_sparql.html  shapes-and-templates.html  templates.html
gabe-scripts/: create-site-model.py  g36.py  load-brick.py  search.py  workflow.py
gabes_points/: fcu_points.csv  sprucehall.ttl  tokens.json
guides/: bacnet-to-brick.html  csv-import.html  generating-queries.html  ingress-bacnet-to-brick.html  ingress.html
libraries/: README.md
migrations/: env.py
notebooks/: 223P-Brick-model.ipynb  223P-Validation.ipynb  223PExample.ipynb  BMS_Parser_Generation.ipynb  BMS_Point_Naming_Convention.ipynb  Compile-model.ipynb  Existing-model-validation-example.ipynb  GabeDemo.ipynb  Ingress-Tutorial-CSV.ipynb  Ingress-Tutorial-XLSX-Multiple-Sheets.ipynb  Ingress-Tutorial-XLSX.ipynb  Model-Builder.ipynb  README.md  Session-example.ipynb  Session-example.md  Sessioning-example.ipynb  Sessioning-example.md  Shape_Builder.ipynb  Template Tutorial.ipynb  Template-Usage.ipynb  TemplateSynthesis.ipynb  Untitled.ipynb  XLSX-Ingress-Tutorial-Multiple-Sheets.ipynb  XLSX-Ingress-Tutorial.ipynb  bulk-template-finder.ipynb  fix.patch  hashing.ipynb  my_site.ttl  notebook_utils.py  output.ttl  pointlabel_to_brick.ipynb  semantic_graph_synthesizer-tutorial.ipynb  template-example.ipynb  template-example.md  test-template-finder.ipynb  test.db
reference/: cli_tool.html  developer_documentation.html
scripts/: bump_dev_version.py  format.py
tests/: conftest.py  test_building_motif.py  test_graph_connection.py  test_graph_handler.py  test_isomorphism.py  test_table_connection.py  test_template.py  test_template_api.py  test_template_matcher.py  test_templates.py  test_utils.py
tutorials/: model_correction.html  model_creation.html  model_validation.html  template_writing.html
(+703 files in other folders)
