[tool.poetry]
name = "BuildingMOTIF"
version = "0"
description = "Building Metadata OnTology Interoperability Framework"
license = "LICENSE.txt"
authors = [
  "Hannah Eslinger <hannah.eslinger@nrel.gov>",
  "Gabriel Fierro <gtfierro@mines.edu>",
  "Avijit Saha <avijit.saha@nrel.gov>",
  "Tobias Shapinsky <tobias.shapinsky@nrel.gov>",
  "Matthew Steen <matthew.steen@nrel.gov>"
]
readme = "README.md"
repository = "https://github.com/NREL/BuildingMOTIF"
documentation = "https://buildingmotif.readthedocs.io"

[tool.poetry.dependencies]
python = "^3.8"
rdflib = "6.1.1"
SQLAlchemy = "^1.4"
pyaml = "^21.10.1"
networkx = "^2.7.1"
types-PyYAML = "^6.0.4"
nbmake = "^1.3.0"
rdflib-sqlalchemy = "^0.5.3"
pyshacl = "^0.19.1"
alembic = "^1.8.0"
Flask = "^2.1.2"
Flask-API = "^3.0.post1"
BAC0 = "^22.9.21"
netifaces = "^0.11.0"
rfc3987 = "^1.3.8"
openpyxl = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylama = "^8.3.8"
pre-commit = "^2.17.0"
pytest-cov = "^3.0.0"
mypy = "^0.931"
sqlalchemy2-stubs = "^0.0.2-alpha.20"
jupytext = "^1.13.8"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
rise = "^5.7.1"
jupyter-book = "^0.13.1"

[tool.poetry.extras]
bacnet-ingress = ["BAC0"]
xlsx-ingress = ["openpyxl"]
all-ingresses = ["BAC0", "openpyxl"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
log_cli_level = "WARNING"
